--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -1,39 +1,20 @@
 {% include header.html %}
 
-    {% assign counter=0 %}
+    {% for post in site.posts %}  
 
-    {% for post in site.posts %}    
-    {% if counter == 0 %}
-    <article class="article  article--large-preview">
+    <article class="article">
         <h2><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h2>
+        <span class="off-screen  {{ post.category }}">{{ post.category }}</span>
         {{ post.excerpt }}
         <a href="{{ post.url }}" title="Read more">Read more &rarr; </a>
-        {% for tag in post.tags %}
-            <span class="article--tag"><a href="/tags/#{{ tag | downcase | replace:' ','_' }}">#{{ tag }}</a></span>
-        {% endfor %}
-    </article>
-    
-    {% else %}
-    
-    <article class="article  article--short-preview"  {% if post.category %} data-category="{{post.category}}" {% endif %}>
-        <div class="gw">
-            <aside class="g one-tenth">
-                <span class="date--year">{{ post.date | date: "%Y" }}</span>
-                <span class="date--month-day">{{ post.date | date: "%d / %m" }}</span>
-            </aside>
-            <div class="g eight-tenths">
-                <h2 {% if post.category %} data-category="{{post.category}} " {% endif %}>
-                    <a href="{{post.url}}" title="Read the article '{{ post.title }}'">{{ post.title }}</a>
-                </h2>                
+        {% if post.tags %}
+            <div class="article__tags">
+            {% for tag in post.tags %}
+                <span class="article--tag"><a href="/tags/#{{ tag | downcase | replace:' ','_' }}">#{{ tag }}</a></span>
+            {% endfor %}
             </div>
-            <div class="g one-tenths">
-                <span class="category">{{ post.category }}</span>
-            </div>
-        </div>
+        {% endif %}
     </article>
-
-    {% endif %}
-    {% assign counter=counter | plus:1 %}
   
   {% endfor %}
   
