re-added a image of me, this time on the about page.

--- a/assets/css/core/_typography.scss
+++ b/assets/css/core/_typography.scss
@@ -7,7 +7,7 @@ h1 {  font-size: 2em; }
 h2 {  font-size: 1.6em; }
 h3 {  font-size: 1.4em; }
 
-.page--cv {
+.page--cv, .page--about {
     h3 {
         margin-top: 2em;
     }
