Fixes and stuff. Finished more of the actual redesign, still work to do.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,8 +46,9 @@
         <option value="">MENU</option>
         <option value="http://kevingimbel.com/">Home</option>
         <option value="http://kevingimbel.com/about">About</option>
-        <option value="http://kevingimbel.com/cv">CV</option>
         <option value="http://kevingimbel.com/archive">Archive</option>
+        <option value="http://kevingimbel.com/cv">Résumé</option>
+        <option value="http://kevingimbel.com/tags">Tags</option>
       </select>
 </header>
 
