--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,20 +1,20 @@
 {% include header.html %}
-    
+
 {% assign tags_max = 0 %}
     {% for tag in site.tags %}
         {% if tag[1].size > tags_max %}
             {% assign tags_max = tag[1].size %}
         {% endif %}
     {% endfor %}
-
+<section class="block__page">
 {% for i in (1..tags_max) reversed %}
     {% for tag in site.tags %}
         {% if tag[1].size == i %}
             <h2 id="{{ tag[0] | downcase | replace:' ','_' }}">{{ tag[0] }}</h2>
-        
+
         {% for post in tag.last %}<a href="{{ post.url }}">{{ post.title }}</a>{% if forloop.last %}{% else %} &bull; {% endif %}{% endfor %}
         {% endif %}
     {% endfor %}
 {% endfor %}
-
+</section>
 {% include footer.html %}
