--- a/assets/css/modules/_article.scss
+++ b/assets/css/modules/_article.scss
@@ -1,8 +1,8 @@
 .article {
     margin: 0 auto 2.5em auto;
-    @include breakpoint("medium") {
-        padding: 1em;
-    }
+    background: #fff;
+    border: 1px solid #ddd;
+    padding: 1em;
 }
 
 .feedback {
@@ -10,4 +10,8 @@
     padding: 2em;
     margin-top: 2em;
     border-left: .15em solid $color--main;
+}
+
+.article__list {
+  margin: 1em 0;
 }
