--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -6,9 +6,15 @@
     padding: 2.5em;
     background: #222;
     color: #fff;
-    
-    @include breakpoint(small) {
+
+    @include breakpoint("small") {
         padding: 1em;
+    }
+
+    h3 {
+      @include breakpoint("small") {
+        font-size: 1em;
+      }
     }
 }
 
