quite some CSS improvments and changes, including moving Google Fonts out of CSS into the <head>.

--- a/assets/css/core/_typography.scss
+++ b/assets/css/core/_typography.scss
@@ -7,6 +7,9 @@ h1 {  font-size: 2em; }
 h2 {  font-size: 1.6em; }
 h3 {  font-size: 1.4em; }
 
+.article--headline {
+    border-bottom: none !important;
+}
 .page--cv, .page--about {
     h3 {
         margin-top: 2em;
