--- a/assets/css/core/_vars.scss
+++ b/assets/css/core/_vars.scss
@@ -4,7 +4,7 @@ $font--serif: 'Merriweather', serif;
 
 
 /* Colors */
-/* blue */
+/* orange */
 $color--main: #F49204;
-$color--accent: #666;
+$color--accent: #222;
 /* used for decoration and accents */
