--- a/assets/css/includes/_syntax.scss
+++ b/assets/css/includes/_syntax.scss
@@ -1,28 +1,22 @@
 
-.highlight .hll { background-color: #333333 }
-.highlight  { 
-
-background: #111111; 
-
-	color: #ffffff ;
-
-	padding: 0.2em 0.9em;
-  	margin: 1em 0;
-	font: normal normal normal 115%/normal 'Monaco', 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace !important;
-  	line-height: 1.1em;
-  	overflow: auto;
-	font-size: 1.0em;
+.highlight { 
+    background: #e8e8e8;
+    border: 1px solid #ccc;
+    color: #222 ;
+    padding: 0.2em 0.9em;
+    margin: 1em 0;
+    font: normal normal normal 115%/normal 'Monaco', 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace !important;
+    line-height: 1.1em;
+    overflow: auto;
+    font-size: 1.0em;
 }
 
 
 code, pre {
-	font-family: "Consolas", "Courier New", "Courier", "FreeMono", monospace;
-	font-size:0.95em;
-	margin: 1em 0 1.5em 0;
+    font-family: "Consolas", "Courier New", "Courier", "FreeMono", monospace;
+    font-size:0.95em;
+    margin: 1em 0 1.5em 0;
 }
-::-webkit-scrollbar {background:#333; height:.5em;}
-::-webkit-scrollbar-thumb {background:#ccc;}
-
 
 .highlight span
 {
@@ -30,23 +24,22 @@ font-family: "Consolas", "Courier New", "Courier", "FreeMono", monospace;
 font-size:1em;
 }
 
-.highlight .hll { background-color: #49483e }
-.highlight  { /*background: #272822;*/ color: #f8f8f2 }
-.highlight .c { color: #75715e } /* Comment */
-.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
-.highlight .k { color: #66d9ef } /* Keyword */
+.highlight  { color: #4d4d4c }
+.highlight .c { color: #4d4d4c } /* Comment */
+.highlight .err { color: #c82829; background-color: #222 } /* Error */
+.highlight .k { color: #4271ae } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
 .highlight .n { color: #f8f8f2 } /* Name */
-.highlight .o { color: #f92672 } /* Operator */
-.highlight .p { color: #f8f8f2 } /* Punctuation */
+.highlight .o { color: #4271ae } /* Operator */
+.highlight .p { color: #4d4d4c } /* Punctuation */
 .highlight .cm { color: #75715e } /* Comment.Multiline */
 .highlight .cp { color: #75715e } /* Comment.Preproc */
 .highlight .c1 { color: #75715e } /* Comment.Single */
 .highlight .cs { color: #75715e } /* Comment.Special */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .kc { color: #66d9ef } /* Keyword.Constant */
-.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
+.highlight .kc { color: #4d4d4d } /* Keyword.Constant */
+.highlight .kd { color: #8959a8 } /* Keyword.Declaration */
 .highlight .kn { color: #f92672 } /* Keyword.Namespace */
 .highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
 .highlight .kr { color: #66d9ef } /* Keyword.Reserved */
@@ -55,7 +48,7 @@ font-size:1em;
 .highlight .m { color: #ae81ff } /* Literal.Number */
 .highlight .s { color: #e6db74 } /* Literal.String */
 .highlight .na { color: #a6e22e } /* Name.Attribute */
-.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
+.highlight .nb { color: #f5871f  } /* Name.Builtin */
 .highlight .nc { color: #a6e22e } /* Name.Class */
 .highlight .no { color: #66d9ef } /* Name.Constant */
 .highlight .nd { color: #a6e22e } /* Name.Decorator */
@@ -64,7 +57,7 @@ font-size:1em;
 .highlight .nf { color: #a6e22e } /* Name.Function */
 .highlight .nl { color: #f8f8f2 } /* Name.Label */
 .highlight .nn { color: #f8f8f2 } /* Name.Namespace */
-.highlight .nx { color: #a6e22e } /* Name.Other */
+.highlight .nx { color: #c82829 } /* Name.Other */
 .highlight .py { color: #f8f8f2 } /* Name.Property */
 .highlight .nt { color: #f92672 } /* Name.Tag */
 .highlight .nv { color: #f8f8f2 } /* Name.Variable */
@@ -77,13 +70,13 @@ font-size:1em;
 .highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
 .highlight .sc { color: #e6db74 } /* Literal.String.Char */
 .highlight .sd { color: #e6db74 } /* Literal.String.Doc */
-.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
+.highlight .s2 { color: #718c00 } /* Literal.String.Double */
 .highlight .se { color: #ae81ff } /* Literal.String.Escape */
 .highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
 .highlight .si { color: #e6db74 } /* Literal.String.Interpol */
 .highlight .sx { color: #e6db74 } /* Literal.String.Other */
 .highlight .sr { color: #e6db74 } /* Literal.String.Regex */
-.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
+.highlight .s1 { color: #718c00 } /* Literal.String.Single */
 .highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
 .highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
 .highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
