--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,3 @@
-//@import "compass";
-// FONTS
-
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400);
-
 @import "core/vars",
         "core/mixins",
         "core/helper",
@@ -19,13 +14,6 @@
         "modules/article",
         "modules/boxes",
         "modules/conditions";
-
-
-
-/* entypo */
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
 
 *, *:before, *:after {
   margin: 0;
@@ -61,20 +49,15 @@ p {
 /* Back To Top*/
 
 .backtop {
-    width:2.5em;
-    height:2.5em;
-    background:#333;
-    position:fixed;
-    top:1.5em;
-    right: 1.5em;
-    display:none;
-    z-index: 9999;
-
-        &:before {
-            content:"\2b06";
-            position: absolute;
-            top:.5em;
-            left:.85em;
-            font-family: 'entypo', sans-serif;
-        }
+  width: 1.5em;
+  height: 1.5em;
+  background: #333;
+  position: fixed;
+  top: 1em;
+  right: 1em;
+  display: none;
+  z-index: 9999;
+  color: $color--main;
+  font-size: 2em;
+  text-align: center;
 }
