added event sidebar widget thingy.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,8 @@
         "core/helper",
         "core/typography";
 
-@import "objects/off-screen";
+@import "objects/off-screen",
+				"objects/lists";
 
 @import "includes/syntax", /* syntax highlight styles*/
         "includes/bullgrid"; /* grid system */
@@ -13,6 +14,7 @@
         "modules/footer",
         "modules/article",
         "modules/boxes",
+        "modules/events",
         "modules/conditions";
 
 *, *:before, *:after {
