--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -1,8 +1,9 @@
 {% include header.html %}
-
+<main class="gw">
+	<section class="g three-quarters small-one-whole">
     {% for post in site.posts %}  
 
-    <article class="article">
+    <article class="article box">
         <h2 class="article--headline"><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h2>
         <span class="off-screen  {{ post.category }}">{{ post.category }}</span>
         {{ post.excerpt }}
@@ -17,5 +18,10 @@
     </article>
   
   {% endfor %}
-  
+	</section>
+	
+	<section class="g one-quarter small-one-whole">
+		{% include events.html %}
+	</section>
+</main>
 {% include footer.html %}
