--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 {% include header.html %}
-<article class="article  {% if post.category %} has--category" data-category="{{post.category}}{% endif %}">
+<article class="article box">
     <h2>{{ page.title}}</h1>
     
     {{ content }}
